Refactor: header for responsive navigation
- Implemented a hamburger menu for small screens.
- Displayed navigation links horizontally for larger screens.
- Removed sticky header functionality and made the header fixed from the start.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <header class="header">
       <nav class="nav">
         <div class="logo">{IJ} Ismael Jabareen</div>
+        <button class="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#education">Education</a></li>
@@ -83,30 +88,6 @@
     <section id="projects" class="section">
       <h1>Projects</h1>
       <div class="projects-container">
-        <div class="project-card">
-          <h2>Forkify</h2>
-          <p>
-            Built using modern <strong>JavaScript</strong> (ES6+), leveraging
-            classes, modules, and asynchronous programming for a dynamic and
-            responsive recipe app.
-          </p>
-          <ul>
-            <li>
-              Integrated an external API for real-time recipe search and data.
-            </li>
-            <li>
-              Implemented bookmarking and custom recipe submission features.
-            </li>
-            <li>
-              Designed a responsive and dynamic UI for a seamless user
-              experience.
-            </li>
-          </ul>
-          <a href="https://github.com/Ezi99/forkify" target="_blank" class="btn"
-            >View on GitHub</a
-          >
-        </div>
-
         <div class="project-card">
           <h2>Draw Your Path</h2>
           <p>
@@ -167,7 +148,29 @@
             >View on GitHub</a
           >
         </div>
-        <!-- Add more project cards as needed -->
+        <div class="project-card">
+          <h2>Forkify</h2>
+          <p>
+            Built using modern <strong>JavaScript</strong> (ES6+), leveraging
+            classes, modules, and asynchronous programming for a dynamic and
+            responsive recipe app.
+          </p>
+          <ul>
+            <li>
+              Integrated an external API for real-time recipe search and data.
+            </li>
+            <li>
+              Implemented bookmarking and custom recipe submission features.
+            </li>
+            <li>
+              Designed a responsive and dynamic UI for a seamless user
+              experience.
+            </li>
+          </ul>
+          <a href="https://github.com/Ezi99/forkify" target="_blank" class="btn"
+            >View on GitHub</a
+          >
+        </div>
       </div>
     </section>
 
